refactor: adapta controllers e services para uso de DTOs em Fabricante